; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_ppgrp_donice_callback.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_ppgrp_donice_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppgrp_nice_args = type { i32*, i32*, i32, i32 }

@PROC_RETURNED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ppgrp_donice_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ppgrp_donice_callback(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ppgrp_nice_args*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.ppgrp_nice_args*
  store %struct.ppgrp_nice_args* %9, %struct.ppgrp_nice_args** %6, align 8
  %10 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %11 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %10, i32 0, i32 3
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %15 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @donice(i32 %12, i32 %13, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %19 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %2
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %25 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  store i32 %23, i32* %26, align 4
  br label %27

27:                                               ; preds = %22, %2
  %28 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %29 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %42

32:                                               ; preds = %27
  %33 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %34 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* %35, align 4
  store i32 %36, i32* %7, align 4
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  %39 = load %struct.ppgrp_nice_args*, %struct.ppgrp_nice_args** %6, align 8
  %40 = getelementptr inbounds %struct.ppgrp_nice_args, %struct.ppgrp_nice_args* %39, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  store i32 %38, i32* %41, align 4
  br label %42

42:                                               ; preds = %32, %27
  %43 = load i32, i32* @PROC_RETURNED, align 4
  ret i32 %43
}

declare dso_local i32 @donice(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
